[package]
name = "ltxmk"
version = "0.0.0"
authors = ["Nixon <nixon.emoony@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A LaTeX build system"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3.14"
anyhow = "1"
log="0.4"
clap-verbosity-flag="0.3.1"
pretty_env_logger="0.4"

